# FlyoVeR

./: README.md
FlyOver/: .gitignore  CMakeLists.txt  README.md
FlyOver/doc/: Methods1.pptx  software_methods.txt
FlyOver/src/: CMakeLists.txt  main.cpp
Jovian/: .gitignore  CMakeLists.txt  README.txt
Jovian/CMakeModules/: FindBulletHelper.cmake  FindOSGHelper.cmake  OsgMacroUtils.cmake
Jovian/src/: BasicObstacleVisitor.cpp  BasicObstacleVisitor.h  CMakeLists.txt  CameraUpdateCallback.h  ColladaVisitor.h  Communicator.cpp  Config_Memento.cpp  Config_Memento.h  Console.cpp  Console.h  CrudeObstacleVisitor.h  FileStatusWidget.h  Globals.h  MotionCallback.cpp  MotionCallback.h  MyGraphicsWindowQt.cpp  PunishmentRegionVisitor.cpp  PunishmentRegionVisitor.h  ReinforcementCategory.ui  ReinforcementZoneWidget.cpp  ReinforcementZoneWidget.h  console.ui  edge.cpp  graphwidget.cpp  graphwidget.h  hud.cpp  node.cpp  scene_model.cpp  scene_model.h  shader_defs.h  viewingWindowQt.cpp  viewingWindowQt.h
Jovian/src/api/: IConfig.h
Jovian/test/: CMakeLists.txt  test_config_xml.cpp  test_reinforcement_xml.cpp  test_testing.cpp
MoviePlayer/: CMakeLists.txt
MoviePlayer/external_libraries/: osgbullet.tgz  osgworks.tgz
MoviePlayer/src/: CMakeLists.txt  CameraUpdateCallback.h  ColladaVisitor  Communicator.cpp  Communicator.h  Config_Memento.cpp  Config_Memento.h  Console  Console.cpp  FileStatusWidget.cpp  Globals.cpp  Globals.h  Graph_Evaluator.h  MotionCallback.cpp  MotionCallback.h  MyGraphicsWindowQt  MyGraphicsWindowQt.cpp  UI_Console.h  console.ui  edge.cpp  edge.h  graphwidget.cpp  hud.cpp  hud.h  jovian.qrc  node.cpp  node.h  scene_model.cpp  scene_model.h  viewingWindowQt  viewingWindowQt.cpp  window_capture_callback.cpp  window_capture_callback.h
RemoteDataServer/: CMakeLists.txt
RemoteDataServer/TreadmillDemo/: TreadmillDemo.cpp  TreadmillDemo.vcproj  serial_test.cpp
RemoteDataServer/src/: CMakeLists.txt  server.cpp
